src/test/ui/block-result/issue-3563.stderr
error[E0599]: no method named `b` found for reference `&Self` in the current scope
  --> $DIR/issue-3563.rs:3:17
   |
LL |         || self.b()
   |                 ^ help: there is an associated function with a similar name: `a`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0599`.
